--- a/recorded/styles/banner.css
+++ b/recorded/styles/banner.css
@@ -2,7 +2,8 @@
     background-image: url(../images/fundo.png);
     background-size: contain;
     background-position: center;
-    padding: 32px 24px;
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 
 /* cleafix */
@@ -30,24 +31,6 @@
 .banner-highlight-description {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-bottom: 24px;
-}
-
-.banner-highlight-link {
-    border: 2px solid #2a0f14;
-    border-radius: 12px;
-    padding: 8px 24px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 18px;
-    font-weight: 600;
-    text-decoration: none;
-    color: #2a0f14;
-    background-color: transparent;
-}
-
-.banner-highlight-link:hover {
-    color: #fff;
-    background-color: #2a0f14;
-    text-decoration: none;
 }
 
 .banner-highlight-image-background {
