feat(recorded): update float technicals to flexbox

--- a/recorded/styles/banner.css
+++ b/recorded/styles/banner.css
@@ -1,4 +1,8 @@
 .banner-highlight {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
     background-image: url(../images/fundo.png);
     background-size: contain;
     background-position: center;
@@ -6,17 +10,14 @@
     padding-bottom: 32px;
 }
 
-/* cleafix */
-.banner-highlight::after {
-    content: '';
-    clear: both;
-    display: table;
-}
-
 .banner-highlight-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     background-color: #e18795;
     padding: 24px;
-    float: left;
+    width: auto;
+    max-width: 65%;
 }
 
 .banner-highlight-title {
@@ -39,7 +40,6 @@
     height: 300px;
     border: 10px solid #f41668;
     border-radius: 50%;
-    float: right;
 }
 
 .banner-highlight-image-background img {
