--- a/recorded/styles/section.css
+++ b/recorded/styles/section.css
@@ -4,6 +4,18 @@
 }
 
 .section-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
     margin-bottom: 32px;
+}
+
+.section-title::after {
+    display: block;
+    content: '';
+    width: 50px;
+    height: 4px;
+    background-color: #2a0f14;
+    margin-top: 8px;
 }
