--- a/recorded/styles/footer.css
+++ b/recorded/styles/footer.css
@@ -1,21 +1,10 @@
 .footer {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     background-color: #2a0f14;
     color: #fff;
     padding-top: 48px;
     padding-bottom: 48px;
-}
-
-/* clearfix */
-.footer::after {
-    content: '';
-    clear: both;
-    display: table;
-}
-
-.footer-navigation,
-.footer-content {
-    float: left;
-    width: 25%;
 }
 
 .footer-navigation-title {
