--- a/recorded/styles/header.css
+++ b/recorded/styles/header.css
@@ -22,3 +22,21 @@
     display: inline;
     padding: 0 4px;
 }
+
+@media screen and (max-width: 768px) {
+    .header {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .header-logo {
+        margin-bottom: 16px;
+    }
+
+    .header-navigation-list {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+}
