--- a/original/styles/layout.css
+++ b/original/styles/layout.css
@@ -7,3 +7,9 @@
     padding-left: 24px;
     padding-right: 24px;
 }
+@media screen and (max-width: 768px) {
+    .layout {
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+}
