feat(original): add responsive styles to faq, product, testiomnials and form

--- a/original/styles/faq.css
+++ b/original/styles/faq.css
@@ -26,3 +26,9 @@
 .faq-details-content {
     padding-top: 12px;
 }
+
+@media screen and (max-width: 768px) {
+    .faq-details {
+        max-width: initial;
+    }
+}
