--- a/original/styles/testimonials.css
+++ b/original/styles/testimonials.css
@@ -21,3 +21,9 @@
     font-size: 0.6em;
     font-weight: 500;
 }
+
+@media screen and (max-width: 768px) {
+    .testimonials-list{
+        flex-direction: column;
+    }
+}
