--- a/recorded/styles/form.css
+++ b/recorded/styles/form.css
@@ -34,3 +34,9 @@
     max-width: 280px;
     cursor: pointer;
 }
+
+@media screen and (max-width: 500px) {
+    .form-button {
+        max-width: initial;
+    }
+}
