feat(original): add google fonts

--- a/original/styles/global.css
+++ b/original/styles/global.css
@@ -16,3 +16,8 @@ a:hover {
     color: #e18795;
     text-decoration: underline;
 }
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Roboto Slab', serif;
+    font-weight: 800;
+}
