feat(recorded): add google fonts and refactor all font-size to relative unit

--- a/recorded/styles/banner.css
+++ b/recorded/styles/banner.css
@@ -21,11 +21,11 @@
 }
 
 .banner-highlight-title {
-    font-size: 18px;
+    font-size: 1.8rem;
 }
 
 .banner-highlight-subtitle {
-    font-size: 32px;
+    font-size: 3.2rem;
     margin-bottom: 12px;
 }
 
