--- a/recorded/styles/global.css
+++ b/recorded/styles/global.css
@@ -1,10 +1,12 @@
 html {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #2a0f14;
+    font-size: 10px;
 }
 
 body {
     background-color: #fff;
+    font-size: 1.8rem;
 }
 
 a {
@@ -15,4 +17,9 @@ a {
 a:hover {
     color: #e18795;
     text-decoration: underline;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Roboto Slab', serif;
+    font-weight: 800;
 }
